Fix html field component to use dark mode

--- a/nova-components/HtmlField/resources/css/field.css
+++ b/nova-components/HtmlField/resources/css/field.css
@@ -1,5 +1,3 @@
-/* Nova Field CSS */
-.h1 {
-    font-weight: bold;
-    color: red;
-}
+@tailwind utilities;
+@tailwind components;
+@tailwind base;
